# Comfy-FilmSimulator

./: Film Preset Adjust.md  README.md  __init__.py  example_comfy_flow.json  films.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
ComfyUI-HDRWorkflow/: __init__.py  dng_reader.py  film_sim.py  save_avif_hdr.py
DNG reader/: __init__.py
