[project]
name = "filmsimulator"
description = "ComfyUI node: realistic, adaptive film simulation for photographic and cinematic looks."
version = "1.0.2"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["numpy", "opencv-python", "# torch installation depends on platform (CPU/GPU). For most users:", "# pip install torch --index-url https://download.pytorch.org/whl/cpu", "# Or follow instructions at https://pytorch.org to get the proper wheel for your system."]

[project.urls]
Repository = "https://github.com/zhuyanan/Comfy-FilmSimulator"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/zhuyanan/Comfy-FilmSimulator/wiki"
"Bug Tracker" = "https://github.com/zhuyanan/Comfy-FilmSimulator/issues"

[tool.comfy]
PublisherId = "monojason"
DisplayName = "Comfy-FilmSimulator"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

